@@ -1,3 +1,12 @@
+2002-01-29 olicha  <olivier.chapuis@free.fr>
+
+	* mod_f2m_communication.html:
+	Documented the MX_PROPERTY_CHANGE and MX_VISIBLE* messages
+
+	* mod_initialization.html:
+	Say a word on the MX_PROPERTY_CHANGE message in the Transparent section,
+	also replace root by parent in one place
+
 2002-01-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
